Menu/Rodape ver.1

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -295,8 +295,9 @@ h6 {
 }
 
 footer.footer {
+  background-color: yellow;
   padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
 }
 
 footer.footer .social-link {
