--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,3 +1,17 @@
+
+
+/*Eventos-CAlendario */
+.calendar {
+  border-width: 3px;
+  border-color: #2437FE;
+  width: 100%;
+  height: 500px;
+}
+@media(min-width: 400px)  {
+  height: 300px;
+}
+
+
 body,
 html {
   width: 100%;
@@ -37,21 +51,6 @@ h6 {
 
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
-}
-
-/* Map */
-.map {
-  height: 30rem;
-}
-
-@media (max-width: 992px) {
-  .map {
-    height: 75%;
-  }
-}
-
-.map iframe {
-  pointer-events: none;
 }
 
 .scroll-to-top {
