--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,15 +1,12 @@
 
 
-/*Eventos-CAlendario */
+/*  Eventos-CAlendario  */
 .calendar {
   width: 100%;
   height: 400px;
 }
-@media(min-width: 400px)  {
-  height: 300px;
-}
 
-
+/*  Geral */
 body,
 html {
   width: 100%;
